# digital-library

./: DEPLOYMENT.md  README.md
backend/: .env.example  .gitignore  alembic.ini  pyproject.toml  render.yaml
backend/app/: main.py
backend/app/core/: config.py  exceptions.py
backend/app/database/: session.py
backend/app/dependencies/: database.py  services.py
backend/app/modules/books/: book_model.py  book_repository.py  book_repository_contract.py  book_schema.py  book_service.py
backend/app/repositories/: base_repository.py
backend/app/repositories/contracts/: base_repository_contract.py
backend/app/routers/: index.py
backend/app/routers/v1/: books.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_create_books_table.py
backend/scripts/: seed.py  start.sh
backend/tests/: conftest.py
backend/tests/modules/books/: test_book_repository.py  test_book_router.py  test_book_service.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: books.ts  client.ts
frontend/src/components/: AppErrorBanner.vue  BaseModal.vue  BookCard.vue  BookCreateModal.vue  BookForm.vue
frontend/src/composables/: useBook.ts  useDarkMode.ts  useDebounce.ts
frontend/src/router/: index.ts
frontend/src/stores/: books.ts
frontend/src/types/: book.ts
frontend/src/views/: BookCreateView.vue  BookDetailView.vue  BookEditView.vue  BookListView.vue
frontend/tests/api/: books.spec.ts
frontend/tests/components/: BookCard.spec.ts  (+2 more)
(+3 files in other folders)
