[project]
name = "backend"
version = "0.1.0"
description = "Digital Library backend — FastAPI + SQLAlchemy + Alembic"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.3",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: FastAPI's canonical DI pattern uses Depends() in argument defaults — this is intentional
# UP046: Generic class syntax — keep TypeVar form for compatibility with ABCs
ignore = ["E501", "B008", "UP046"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
